--- a/src/main/webapp/view/department/list.html
+++ b/src/main/webapp/view/department/list.html
@@ -7,7 +7,10 @@
 <body>
 <h1>Department List</h1>
 <a href="/employees">Employees List</a> </br>
-<a href="/create-department">Add new Department</a> </br>
+<a href="/create-department">Add new Department</a> </br></br>
+
+
+
 <table border="1">
     <tr>
         <td>Name</td>
